--- a/index-3.html
+++ b/index-3.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" href="assets/css/style.css">
 
 <link rel="stylesheet" href="assets/css/responsive.css">
-<title>Việc Làm - Work Bank</title>
+<title> A Việc Làm - Work Bank</title>
 <link width="20px" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 <body>
@@ -969,7 +969,7 @@ Get Started
 <div class="col-sm-6 col-lg-3">
 <div class="pricing-item">
 <div class="top">
-<h3>Free</h3>
+<h3>Start-up</h3>
 <span>For companies under 10</span>
 </div>
 <div class="middle">
