--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav">
 <li class="nav-item">
-<a href="#" class="nav-link dropdown-toggle">Home <i class='bx bx-chevron-down'></i></a>
+<a href="index-3.html" class="nav-link dropdown-toggle">Home <i class='bx bx-chevron-down'></i></a>
 <ul class="dropdown-menu">
 <li class="nav-item">
 <a href="index.html" class="nav-link">Home Demo One</a>
