edit file 404.html

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
 <h1>Opps!</h1>
 <h2>Here Is Some Problem</h2>
 <p>The page you are looking for it maybe deleted</p>
-<a href="index.html">Go To Home</a>
+<a href="index-3.html">Go To Home</a>
 </div>
 </div>
 </div>
