--- a/candidates.html
+++ b/candidates.html
@@ -28,8 +28,8 @@
 <link rel="stylesheet" href="assets/css/style.css">
 
 <link rel="stylesheet" href="assets/css/responsive.css">
-<title>Jecto - Job Board and Portal HTML Template</title>
-<link rel="icon" type="image/png" href="assets/img/favicon.png">
+<title> A Việc Làm - Work Bank</title>
+<link width="20px" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 <body>
 
@@ -59,21 +59,10 @@
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav">
 <li class="nav-item">
-<a href="#" class="nav-link dropdown-toggle">Home <i class='bx bx-chevron-down'></i></a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="index.html" class="nav-link">Home Demo One</a>
+<a href="jobs.html" class="nav-link">Việc làm</a>
 </li>
 <li class="nav-item">
-<a href="index-2.html" class="nav-link">Home Demo Two</a>
-</li>
-<li class="nav-item">
-<a href="index-3.html" class="nav-link">Home Demo Three</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="#" class="nav-link dropdown-toggle">Pages <i class='bx bx-chevron-down'></i></a>
+<a href="#" class="nav-link dropdown-toggle">Phỏng vấn <i class='bx bx-chevron-down'></i></a>
 <ul class="dropdown-menu">
 <li class="nav-item">
 <a href="#" class="nav-link dropdown-toggle">Users <i class='bx bx-chevron-down'></i></a>
@@ -127,14 +116,14 @@
 </ul>
 </li>
 <li class="nav-item">
-<a href="about.html" class="nav-link">About</a>
+<a href="about.html" class="nav-link">Mức lương</a>
 </li>
 <li class="nav-item">
 <span class="tooltip-span">Hot</span>
-<a href="#" class="nav-link dropdown-toggle">Jobs <i class='bx bx-chevron-down'></i></a>
+<a href="#" class="nav-link dropdown-toggle">Công ty <i class='bx bx-chevron-down'></i></a>
 <ul class="dropdown-menu">
 <li class="nav-item">
-<a href="jobs.html" class="nav-link">Jobs</a>
+<a href="jobs.html" class="nav-link">Công ty</a>
 </li>
 <li class="nav-item">
  <a href="favourite-jobs.html" class="nav-link">Favourite Jobs</a>
@@ -149,10 +138,10 @@
 </li>
 <li class="nav-item">
 <span class="tooltip-span two">New</span>
-<a href="#" class="nav-link dropdown-toggle active">Candidates <i class='bx bx-chevron-down'></i></a>
+<a href="#" class="nav-link dropdown-toggle">WowCV <i class='bx bx-chevron-down'></i></a>
 <ul class="dropdown-menu">
 <li class="nav-item">
-<a href="candidates.html" class="nav-link active">Candidates</a>
+<a href="candidates.html" class="nav-link">Candidates</a>
 </li>
 <li class="nav-item">
 <a href="candidate-details.html" class="nav-link">Candidate Details</a>
@@ -160,7 +149,7 @@
 </ul>
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link dropdown-toggle">Blog <i class='bx bx-chevron-down'></i></a>
+<a href="#" class="nav-link dropdown-toggle">HR Insider <i class='bx bx-chevron-down'></i></a>
 <ul class="dropdown-menu">
 <li class="nav-item">
 <a href="blog.html" class="nav-link">Blog</a>
@@ -170,17 +159,14 @@
 </li>
 </ul>
 </li>
-<li class="nav-item">
-<a href="contact.html" class="nav-link">Contact</a>
-</li>
 </ul>
 <div class="side-nav three">
 <a class="login-left" href="register.html">
 <i class="flaticon-enter"></i>
-Login/Register
+Đăng ký
 </a>
 <a class="job-right" href="post-a-job.html">
-Post A Job
+Nhà Tuyển Dụng
 <i class='bx bx-plus'></i>
 </a>
 </div>
@@ -189,6 +175,7 @@ Post A Job
 </div>
 </div>
 </div>
+
 
 
 <div class="page-title-area">
