--- a/index-3.html
+++ b/index-3.html
@@ -59,7 +59,7 @@
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav">
 <li class="nav-item">
-<a href="index-3.html" class="nav-link">Việc làm</a>
+<a href="jobs.html" class="nav-link">Việc làm</a>
 </li>
 <li class="nav-item">
 <a href="#" class="nav-link dropdown-toggle">Phỏng vấn <i class='bx bx-chevron-down'></i></a>
